Support multiple targets in admin nbt-rod command